Fix invisible close button for Chrome in info modal

--- a/src/css/support.scss
+++ b/src/css/support.scss
@@ -200,7 +200,7 @@ $lobby-border-radius: 0px;
   box-sizing: border-box;
   color: $action-1;
   background: white;
-  display: inline-flex;
+  display: inline-block;
   justify-content: center;
   align-items: center;
   font-family: NotoSansSymbols2;
